--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -13,6 +13,8 @@
 
   --button-bg: rgba(0, 0, 0, 0.1);
   --button-hover-bg: rgba(145, 67, 50, 0.1);
+
+  --logo-bg: rgba(0,0,0,0)
 }
 
 @media (prefers-color-scheme: dark) {
@@ -31,6 +33,8 @@
 
     --button-bg: #ccc;
     --button-hover-bg: rgb(29, 29, 29);
+
+    --logo-bg: #ccc
   }
 }
 
